# health-research-agent-api

./: .env.example  .gitignore  AZURE_DEPLOYMENT.md  CLAUDE.md  Dockerfile  Dockerfile.azure  README.md  azure-app-service.template.json  azure-container-instance.template.yaml  compose.yaml  google-cloud-run-service.yaml  pyproject.toml  pytest.ini  requirements-linux.txt  requirements.txt  switch_env.sh
.claude/: settings.local.json
agents/: agent_types.py  chunking_strategies.py  health_research_network_agent.py  hex_gig_agent.py  llm_models.py  marhonivirus_agent.py  nex_agent.py  registry.py  selector.py  ssc_psych_agent.py
api/: main.py  settings.py
api/routes/: agents.py  (+2 more)
azure_infra_config/: deploy-test.md  marhinovirus-study-api_v1-dec2025.bicep
db/: __init__.py  session.py  sqlite_data.db  url.py
future-feat/: per-user-usage-reporting.md  ssc-psych-inline-citation-excerpts.md
infrastructure/: postgres-hrn-db.bicep
knowledge_base/: __init__.py  hex_gig_knowledge_base.py  hex_gig_rss_knowledge.py  hrn_knowledge_base.py  marhinovirus_knowledge_base.py  nex_knowledge_base.py  nex_rss_knowledge.py  ssc_psych_knowledge_base.py
plans/: per-user-usage-reporting.md  ssc-psych-phase-2.md  vax-side-effect-tier-fix.md
scripts/: build_image.sh  download_model.py  fill_hex_gig_uni_wien_urls.py  fill_nex_uni_wien_urls.py  generate_requirements.sh  refresh_hex_gig_rss.py
services/: budget_service.py  citations_service.py  metrics_retention.py  metrics_service.py  nextcloud_client.py  nextcloud_pdf_provider.py  ssc_web_scraper.py
tests/: conftest.py
(+98 files in other folders)
