[project]
name = "health-research-agent-api"
version = "2.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Akshay (cloned from Agno)", email = "akshay.lakhi@mindfort.tech" }]

dependencies = [
  "agno",
  "aiohttp",
  "fastapi[standard]",
  "google-genai",
  "openai",
  "pgvector",
  "psycopg2-binary",
  "pypdf",
  "sentence-transformers",
  "sqlalchemy",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cpu"]
extra-index-url = ["https://pypi.org/simple/"]